# backend/src/main/java/com/pcstore/entity/enums/OrderStatus.java
@@ -1,5 +1,5 @@
 package com.pcstore.entity.enums;
 
 public enum OrderStatus {
-    PENDING, CONFIRMED, SHIPPING, DELIVERED, CANCELLED
+    PENDING, CONFIRMED, SHIPPING, DELIVERED, CANCELLED, EXPIRED_PENDING_RECONCILIATION
 }
