# backend/src/main/java/com/pcstore/entity/enums/PaymentMethod.java
@@ -1,5 +1,5 @@
 package com.pcstore.entity.enums;
 
 public enum PaymentMethod {
-    COD, BANK_TRANSFER
+    COD, VNPAY
 }
